libstdc++-v3/testsuite/21_strings/basic_string/cons/char/nullptr.cc
// { dg-do compile { target c++11 } }
#include <string>

std::string s = nullptr; // { dg-error "deleted" "P2166R1" }
